-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 17, 18
-
Component/s: hotspot
-
b12
-
generic
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8292759 | 17.0.5 | Yuri Nesterenko | P2 | Resolved | Fixed | b04 |
submit and assign this bug on behalf of tobytbzhang@tencent.com
Following test fails on fastdebug build with the options: "-XX:+UseZGC -XX:+VerifyAfterGC -Xlog:gc*=trace". It crashes on the unknown claim value of the ClassLoaderData
public class A {
public static void main(String... args) {
System.gc();
}
}
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/data/ws/jdk/src/hotspot/share/classfile/classLoaderData.cpp:971), pid=22619, tid=22620
# Error: ShouldNotReachHere()
#
# JRE version: OpenJDK Runtime Environment (18.0) (fastdebug build 18-internal+0-adhoc.root.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 18-internal+0-adhoc.root.jdk, mixed mode, sharing, tiered, compressed class ptrs, z gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x8afd16] ClassLoaderData::print_on(outputStream*) const+0x8a6
#
# Core dump will be written. Default location: /data/ws/jdk/core.22619
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -XX:+UseZGC -XX:+VerifyAfterGC -Xlog:gc*=trace A
Host: tobytbzhang1597919431388-0, Intel(R) Xeon(R) Gold 61xx CPU, 32 cores, 32G, CentOS Linux release 7.2 (Final)
Time: Fri Aug 13 14:23:26 2021 CST elapsed time: 0.234355 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0x00007f9cb002c630): JavaThread "DestroyJavaVM" [_thread_in_vm, id=22620, stack(0x00007f9cba0f1000,0x00007f9cba1f2000)]
Stack: [0x00007f9cba0f1000,0x00007f9cba1f2000], sp=0x00007f9cba1f0920, free space=1022k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x8afd16] ClassLoaderData::print_on(outputStream*) const+0x8a6
V [libjvm.so+0x8bb4c3] ClassLoaderDataGraph::print_on(outputStream*)+0x1d3
V [libjvm.so+0xd4e225] before_exit(JavaThread*)+0x335
V [libjvm.so+0x17bcfff] Threads::destroy_vm()+0x23f
V [libjvm.so+0xe65bd3] jni_DestroyJavaVM+0xc3
C [libjli.so+0x41b3] JavaMain+0x403
C [libjli.so+0x7609] ThreadJavaMain+0x9
Register to memory mapping:
Following test fails on fastdebug build with the options: "-XX:+UseZGC -XX:+VerifyAfterGC -Xlog:gc*=trace". It crashes on the unknown claim value of the ClassLoaderData
public class A {
public static void main(String... args) {
System.gc();
}
}
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/data/ws/jdk/src/hotspot/share/classfile/classLoaderData.cpp:971), pid=22619, tid=22620
# Error: ShouldNotReachHere()
#
# JRE version: OpenJDK Runtime Environment (18.0) (fastdebug build 18-internal+0-adhoc.root.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 18-internal+0-adhoc.root.jdk, mixed mode, sharing, tiered, compressed class ptrs, z gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x8afd16] ClassLoaderData::print_on(outputStream*) const+0x8a6
#
# Core dump will be written. Default location: /data/ws/jdk/core.22619
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -XX:+UseZGC -XX:+VerifyAfterGC -Xlog:gc*=trace A
Host: tobytbzhang1597919431388-0, Intel(R) Xeon(R) Gold 61xx CPU, 32 cores, 32G, CentOS Linux release 7.2 (Final)
Time: Fri Aug 13 14:23:26 2021 CST elapsed time: 0.234355 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0x00007f9cb002c630): JavaThread "DestroyJavaVM" [_thread_in_vm, id=22620, stack(0x00007f9cba0f1000,0x00007f9cba1f2000)]
Stack: [0x00007f9cba0f1000,0x00007f9cba1f2000], sp=0x00007f9cba1f0920, free space=1022k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x8afd16] ClassLoaderData::print_on(outputStream*) const+0x8a6
V [libjvm.so+0x8bb4c3] ClassLoaderDataGraph::print_on(outputStream*)+0x1d3
V [libjvm.so+0xd4e225] before_exit(JavaThread*)+0x335
V [libjvm.so+0x17bcfff] Threads::destroy_vm()+0x23f
V [libjvm.so+0xe65bd3] jni_DestroyJavaVM+0xc3
C [libjli.so+0x41b3] JavaMain+0x403
C [libjli.so+0x7609] ThreadJavaMain+0x9
Register to memory mapping:
- backported by
-
JDK-8292759 ZGC: fastdebug build crashes when printing ClassLoaderData
-
- Resolved
-
- relates to
-
JDK-8227175 ZGC: ZHeapIterator visits potentially dead objects
-
- Closed
-
- links to
-
Commit
openjdk/jdk17u-dev/2796eca9
-
Commit
openjdk/jdk/741f58c1
-
Review
openjdk/jdk17u-dev/643
-
Review
openjdk/jdk/5107
(1 links to)