8272417: ZGC: fastdebug build crashes when printing ClassLoaderData